[package]
name = "timer-tiger"
version = "0.1.1"
edition = "2024"
description = "Pomodoro-style CLI timer for macOS (binary: tt)"
repository = "https://github.com/ma-cohen/tiger-timer"
license = "MIT"
readme = "README.md"
keywords = ["pomodoro", "timer", "cli", "macos", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
libc = "0.2.185"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
